deploy/apps/dsa-tracker/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dsa-tracker
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: dsa-tracker.kakde.eu
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dsa-tracker-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dsa-tracker-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - dsa-tracker.kakde.eu
      secretName: dsa-tracker-kakde-eu-tls
